--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,7 @@ body{
     background-attachment: fixed; /* Makes the image stay fixed during scrolling */
     background-position: center; /* Centers the image */
 }
+
+*::-webkit-scrollbar {
+    display: none;
+  }
